# xpg

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  Makefile  Makefile.md  README.master.md  README.md  README.template.md  config.json
.github/workflows/: rust.yml
benches/: xpg.rs
fig/: password_strength.png.uri
src/: lib.rs  tests.rs
t/: README.md
